# faker-ecommerce

./: .gitignore  LICENSE  README.md  pyproject.toml
faker_ecommerce/: __init__.py  provider.py
tests/: test_provider.py
