[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faker-ecommerce-provider"
version = "1.0.2"
description = "Generate realistic e-commerce test data: products, SKUs, orders, 20+ carriers, 20+ payment methods, coupons, reviews, and more"
readme = "README.md"
license = {text = "MIT"}
keywords = ["faker", "ecommerce", "e-commerce", "fake-data", "testing", "shopping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "faker>=18.0.0",
]

[project.urls]
Homepage = "https://github.com/rodrigobnogueira/faker-ecommerce"
Repository = "https://github.com/rodrigobnogueira/faker-ecommerce"

[tool.setuptools.packages.find]
where = ["."]
